Stop images from being squished on smaller screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -45,9 +45,18 @@ img.plant.small_icon {
 }
 
 table.plant_list .plant_icon img {
-    height: 60px;
-    width: 60px;
     border-radius: 5px;
+    height: 60px;
+    min-height: 60px;
+    min-width: 60px;
+    width: 60px;
+}
+
+table.plant_list .plant_icon {
+    border-radius: 5px;
+    min-height: 60px;
+    min-width: 60px;
+    background-color: lightgray;
 }
 
 @media (min-width: 37.5em) { 
